# react-native-encoding

./: .clang-format  .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  ReactNativeEncoding.podspec  commitlint.config.mjs  eslint.config.mjs  lefthook.yml  package.json  react-native.config.js  tsconfig.build.json  tsconfig.json
.changeset/: config.json  eighty-eels-lose.md
.github/workflows/: lint-cpp-objc.yaml  lint-js-typecheck.yaml  release.yml  test-cpp.yaml  test-js.yaml
android/: build.gradle
android/src/main/java/com/reactnativeencoding/: ReactNativeEncodingPackage.kt
apple/: ReactNativeEncodingModuleProvider.h  ReactNativeEncodingModuleProvider.mm
cpp/: CMakeLists.txt  ReactNativeEncodingArrayBuffer.cpp  ReactNativeEncodingArrayBuffer.h  ReactNativeEncodingModule.cpp  ReactNativeEncodingModule.h
encoding-core/: CMakeLists.txt  ReactNativeEncodingBase64.cpp  ReactNativeEncodingBase64.h  ReactNativeEncodingHex.cpp  ReactNativeEncodingHex.h  base64.hpp
js-tests/: ReactNativeEncodingTests.spec.ts
native-tests/: CMakeLists.txt  ReactNativeEncodingDataset.h  ReactNativeEncodingFixtures.h  ReactNativeEncodingTests.cpp  prepare-and-run-tests.sh  run-tests.sh
scripts/: format-cpp.sh  format-objc.sh  generate-cpp-dataset.js  lint-cpp.sh  lint-objc.sh
src/: index.android.ts  index.ts  types.ts
src/specs/: NativeReactNativeEncodingModule.ts
tests-datasets/: dataset.json
